# hello-hermes

./: README.md  project-quality-report-20260424.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.py
.github/workflows/: ci.yml
src/: hello_hermes.py
src/hello_hermes/: __init__.py  utils.py
templates/configs/: hermes-vps-配置中心实操手册-20260423.html  备份配置模板-20260423.html  安全配置模板-20260423.html  数据库配置模板-20260423.html  监控配置模板-20260423.html  网络配置模板-20260423.html
tests/: pytest.ini  test_hello_hermes.py
